--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="container">
               <div class="img">
-                <img src="images/coffee-cup.jpg" alt="">
+                <img src="coffee-cup.jpg" alt="">
               </div>
               <div class="text">
                   <h3>Exclucsive Services</h3>
